Fixed positioning for dark mode button

--- a/Foolgle/styles/Foolgle-home.css
+++ b/Foolgle/styles/Foolgle-home.css
@@ -99,6 +99,8 @@ input#search-query{
     border: none;
     background-color: rgb(62, 49, 49);
     border-radius: 100px;
+    margin-right: 10px;
+    margin-top: 7px;
 }
 
 
